# cpp-unittests-boilerplate

./: README.md
my_project/: CMakeLists.txt
my_project/modules/app/: CMakeLists.txt
my_project/modules/app/src/: main.cpp
my_project/modules/boilerplate_module/: CMakeLists.txt
my_project/modules/boilerplate_module/include/boilerplate_module/: boilerplate.h
my_project/modules/boilerplate_module/src/: boilerplate.cpp
my_project/modules/boilerplate_module/unittests/: CMakeLists.txt  boilerplate_unittests.cpp
